feat(api) : refatorado sistema de pesquisa de Mangá para usar RequestParam
Refatorado o sistema de pesquisa de Mangá para usar RequestParam ao invés de PathVariable tanto no frontend quanto na API.
- Adicionado interceptador de erros no frontend para melhorar tratamento de erros.
- Refatorado status code da ResourceAlreadyExistsException para ser mais coeso

--- a/mymanga-frontend/mymanga-frontend/src/app/components/header/header.html
+++ b/mymanga-frontend/mymanga-frontend/src/app/components/header/header.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Início</a>
+          <a class="nav-link" (click)="goHome()" style="cursor: pointer;">Início</a>
         </li>
         
         <li class="nav-item" *ngIf="!isAuthenticated">
