--- a/mymanga-frontend/mymanga-frontend/src/app/pages/admin-dashboard/admin-dashboard.html
+++ b/mymanga-frontend/mymanga-frontend/src/app/pages/admin-dashboard/admin-dashboard.html
@@ -1,4 +1,5 @@
-<div class="container mt-4">
+<div class="container mt-5 mb-5">
+  <h1 class="mb-4 display-4">Painel Administrativo</h1>
   <div class="row justify-content-center">
     <div class="col-lg-8 mb-4">
       <div class="card">
