--- a/mymanga-frontend/mymanga-frontend/src/app/pages/home/home.html
+++ b/mymanga-frontend/mymanga-frontend/src/app/pages/home/home.html
@@ -1,5 +1,5 @@
-<div class="container mt-4">
-  <h1 class="mb-4">Catálogo de Mangás</h1>
+<div class="container mt-5 mb-5">
+  <h1 class="mb-4 display-4">Catálogo de Mangás</h1>
 
   <form (ngSubmit)="searchMangas()" class="row g-3 mb-4">
     <div class="col-9">
