--- a/mymanga-frontend/mymanga-frontend/src/app/pages/cart/cart.html
+++ b/mymanga-frontend/mymanga-frontend/src/app/pages/cart/cart.html
@@ -1,6 +1,6 @@
-<div class="container my-5">
+<div class="container mt-5 mb-5">
   <div class="cart-container">
-    <h1 class="mb-4">Meu Carrinho</h1>
+    <h1 class="mb-4 display-4">Meu Carrinho</h1>
 
     @if (cartItems.length === 0 && !loading) {
       <div class="empty-cart text-center py-5">
