--- a/mymanga-frontend/mymanga-frontend/src/app/pages/orders/orders.html
+++ b/mymanga-frontend/mymanga-frontend/src/app/pages/orders/orders.html
@@ -1,6 +1,6 @@
-<div class="container my-5">
+<div class="container mt-5 mb-5">
   <div class="orders-container">
-    <h1 class="mb-4">Meus Pedidos</h1>
+    <h1 class="mb-4 display-4">Meus Pedidos</h1>
 
     @if (loading) {
       <div class="alert alert-info">Carregando seus pedidos...</div>
