--- a/mymanga-frontend/mymanga-frontend/src/app/pages/register/register.html
+++ b/mymanga-frontend/mymanga-frontend/src/app/pages/register/register.html
@@ -1,9 +1,9 @@
-<div class="container my-5">
+<div class="container mt-5 mb-5">
   <div class="row justify-content-center">
-    <div class="col-md-6">
+    <div class="col-md-6 col-lg-5">
       <div class="card">
         <div class="card-header">
-          <h3>Cadastro</h3>
+          <h3 class="display-6">Cadastro</h3>
           <p class="text-muted">Crie sua conta</p>
         </div>
         <div class="card-body">
