feat : adicionado páginas de contato e de sobre
Adicionada páginas de contato e sobre do projeto com links do rodapé
-adiciona opção de selecionar quantidade de itens no carrinho para aumentar ou diminuir
-adiciona opção na homePage para ordernar mangás por nota e mostra as notas dos mangás.
-refatora variável da EmailService no listener de troca de senha para ser uma constante

--- a/mymanga-frontend/mymanga-frontend/src/app/components/footer/footer.html
+++ b/mymanga-frontend/mymanga-frontend/src/app/components/footer/footer.html
@@ -1,5 +1,18 @@
-<footer class="bg-dark text-white text-center p-3 mt-4">
-  <div class="container">
-    <p class="mb-0">&copy; 2025 MyMangá. Este é um projeto fictício. </p>
+<footer class="bg-dark text-light py-4 mt-5 border-top border-secondary">
+  <div class="container text-center">
+    
+    <div class="mb-3">
+      <a routerLink="/" class="text-light text-decoration-none mx-2 hover-link">Home</a>
+      <a routerLink="/sobre" class="text-light text-decoration-none mx-2 hover-link">Sobre o Projeto</a>
+      <a routerLink="/contato" class="text-light text-decoration-none mx-2 hover-link">Contato</a>
+      <a routerLink="/orders" class="text-light text-decoration-none mx-2 hover-link">Pedidos</a>
+      <a routerLink="/cart" class="text-light text-decoration-none mx-2 hover-link">Carrinho</a>
+    </div>
+    
+    <div class="small text-secondary">
+      &copy; 2025 MyManga. Este é um projeto fictício.
+      <br>
+      Desenvolvido como requisito parcial para a disciplina de Programação Web.
+    </div>
   </div>
 </footer>
