--- a/mymanga-frontend/mymanga-frontend/src/app/pages/home/home.html
+++ b/mymanga-frontend/mymanga-frontend/src/app/pages/home/home.html
@@ -1,5 +1,5 @@
 <div class="container mt-5 mb-5">
-  <h1 class="mb-4 display-4">Catálogo de Mangás</h1>
+  <h1 class="mb-4 display-4">Todos os Mangás</h1>
 
   <form (ngSubmit)="searchMangas()" class="row g-3 mb-4">
     <div class="col-9">
@@ -23,10 +23,24 @@
     {{ error }}
   </div>
 
+  <div class="d-flex justify-content-end mb-3">
+    <button class="btn btn-outline-warning" (click)="ordenarPorNota()">
+      <i class="bi bi-star-fill me-2"></i>
+      <span *ngIf="currentSort === 'rating,desc'">Ver Padrão</span>
+      <span *ngIf="currentSort !== 'rating,desc'">Melhores Avaliados</span>
+    </button>
+  </div>
+
   <div class="row g-4">
-    <div class="col-md-4 col-sm-6" *ngFor="let manga of mangas; trackBy: trackByMangaId">
+    <div class="col-12 col-sm-6 col-lg-3 mb-4" *ngFor="let manga of mangas; trackBy: trackByMangaId">
       <div class="card h-100" [routerLink]="['/manga', manga.id]" style="cursor: pointer;">
-        <img [src]="manga.imageUrl" class="card-img-top" [alt]="manga.title" *ngIf="manga.imageUrl">
+        <div class="position-relative">
+          <img [src]="manga.imageUrl" class="card-img-top" [alt]="manga.title" *ngIf="manga.imageUrl" style="height: 300px; object-fit: cover;">
+          
+          <span class="position-absolute top-0 end-0 badge bg-dark text-warning m-2 fs-6 opacity-75">
+            <i class="bi bi-star-fill"></i> {{ manga.rating }}
+          </span>
+        </div>
         
         <div class="card-body">
           <h4 class="card-title">{{ manga.title }}</h4>
